summative.moria.Moria.scala.error
Erreur de compilation :
Moria:23: error: '(' expected but identifier found.
  if estFaceMur() {
     ^Moria:29: error: illegal start of simple expression
} 
^